--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "apollo-music-share",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.13.7",
+    "node": "12.14.1"
+  },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.9.4",
