--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "apollo-music-share",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "npm": "6.13.7",
-    "node": "12.14.1"
-  },
+  "homepage": "http://kanikas01.github.io/apollo-music-share",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.9.4",
@@ -25,6 +22,8 @@
     "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
